# GL_LinuxTraining_Template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  stdafx.h
src/Persons/: AbstractPerson.hpp  Author.cpp  Author.hpp  Librarian.cpp  Librarian.hpp
test/: CMakeLists.txt  stdafx_test.h
test/Persons/: MockedPerson.hpp  PersonTesting.cpp
